# Velocity

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: commands.md
scripts/: install.ps1  install.sh
src/: main.rs
src/services/: add.rs  delete.rs  list.rs  mod.rs  run.rs  tui.rs  update.rs
src/utils/: display.rs  mod.rs  storage.rs  tui.rs
