[package]
name = "velo"
version = "0.1.0"
edition = "2024"
description = "Universal Command Macro Engine - store and run frequently used commands as named macros"
authors = ["Bazil Suhail"]
repository = "https://github.com/BazilSuhail/Velocity"
homepage = "https://github.com/BazilSuhail/Velocity"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2"
crossterm = "0.28"
chrono = "0.4"
